# Alpha

./: .gitignore  Alpha.cbp  Alpha.depend  Alpha.layout  CMakeLists.txt  README.md  assign.cpp  assign.h  calculator.cpp  calculator.h  cmdtest.txt  codefile.txt  command.cpp  command.h  console_in.cpp  console_in.h  console_out.cpp  end_while.cpp  endif.cpp  formatted_line.cpp  formatter.cpp  formatter.h  formattest.txt  if.cpp  if.h  interpreter.cpp  interpreter.h  loader.cpp  loader.h  loader_test.cpp  main.cpp  mapper.cpp  mapper.h  memory_dump.cpp  parser.cpp  parser.h  parser_test.cpp  poly_var.cpp  poly_var.h  resolver.cpp  (+8 more)
examples/: gui_moving_square.txt  parsed_gui_example.txt
examples/include_example/: extra.txt  main.txt
include/: error_codes.h
include/commands/: assign.h  call_command.h  clear_window.h  command.h  console_in.h  console_out.h  console_out_ln.h  create_window.h  custom_command.h  draw_rect.h  end_custom_command.h  end_while.h  endif.h  hide_window.h  if.h  memory_dump.h  render_window.h  show_window.h  wait.h  while.h
include/formatter/: formatted_data.h  formatted_line.h  formatter.h
include/gui/: window.h
include/init/: command_extractor.h  extracted_line.h  file_loader.h  initialiser.h  loader.h  mapper.h  parser.h  preprocessor.h  tool_chain.h
include/runtime/: calculator.h  environment.h  interpreter.h  resolver.h  searcher.h
src/: main.cpp  testmain.cpp
src/commands/: assign.cpp  call_command.cpp  clear_window.cpp  command.cpp  console_in.cpp  console_out.cpp  console_out_ln.cpp  create_window.cpp  custom_command.cpp  (+11 more)
(+22 files in other folders)
